# json-struct

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: release.yml  tests.yml
src/: error.rs  main.rs  value_writer.rs
src/value_writer/: console.rs
tests/: example.json  example.yaml  test_json_struct.rs
