[package]
name = "json-struct"
version = "0.1.2"
description = "Shows the full struct of a json file"
authors = ["Mathieu Lemay <acidrain1@gmail.com>"]
repository = "https://github.com/mathieu-lemay/json-struct"
license = "MIT"
readme = "README.md"
edition = "2018"

[dependencies]
clap = "2.33"
serde_json = "1.0"
serde_yaml = "0.8"
termcolor = "1.1"
atty = "0.2"

[build-dependencies]
built = { version = "0.5", features = ["git2"] }
