[package]
name = "json-struct"
version = "0.1.4"
description = "Shows the full struct of a json or yaml file"
authors = ["Mathieu Lemay <acidrain1@gmail.com>"]
repository = "https://github.com/mathieu-lemay/json-struct"
license = "MIT"
readme = "README.md"
edition = "2018"

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
clap_complete = "4.2.3"
serde_json = "1.0"
serde_yaml = "0.9.14"
termcolor = "1.1"
atty = "0.2"
lazy_static = "1.4.0"
toml = "0.7.3"

[dev-dependencies]
assert_cmd = "2.0.4"
mockall = "0.11.3"
